<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/text_major"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner_major"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="@string/text_year"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/yearRadioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/yearRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522">

        <RadioButton
            android:id="@+id/freshman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_freshman"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/sophomore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sophomore"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/junior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_junior"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/senior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_senior"
            android:textSize="15sp" />
    </RadioGroup>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:text="@string/action_next"
        android:onClick="onNextClick"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <Spinner
        android:id="@+id/spinner_major"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:entries="@array/majors_array"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239" />


</androidx.constraintlayout.widget.ConstraintLayout>